--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,31 @@
-#album-cover {
-  height: 100px;
-  width: auto;
+#modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-#asoa-img {
-  height: 100px;
-  width: auto;
+#modal-content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
 }
 
-.toggle-form {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
-.toggle-form button {
-  width: 200px;
+
+.create-title {
+  float: left;
+  font-size: 25px;
+  font-weight: bold;
 }
