--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,5 @@
-.header-container {
-  margin-top: 30px;
-  align-items: center;
-  text-align: center;
-  margin-bottom: 30px;
+input,
+button,
+label {
+  margin: 10px;
 }
